# picongpu

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPYING.LESSER  README.md  USAGE.rst  alpakaConfig.cmake  configure  pic-create
src/libPMacc/examples/gameOfLife2D/: CMakeLists.txt  main.cu
src/libPMacc/examples/gameOfLife2D/include/: Evolution.hpp  GatherSlice.hpp  GrayImgWriter.hpp  Simulation.hpp  types.hpp
src/libPMacc/examples/gameOfLife2D/src/: main.cpp  main.cu
src/libPMacc/examples/gameOfLife2D/submit/: 4gpus.cfg
src/picongpu/: CMakeLists.txt  main.cpp  main.cu
src/picongpu/include/: simulation_classTypes.hpp  simulation_defines.hpp  simulation_types.hpp
src/picongpu/include/algorithms/: AssignedTrilinearInterpolation.hpp  DifferenceToLower.hpp  DifferenceToUpper.hpp  FieldToParticleInterpolation.hpp  FieldToParticleInterpolationNative.hpp  Set.hpp  ShiftCoordinateSystem.hpp  ShiftCoordinateSystemNative.hpp  Velocity.hpp
src/picongpu/include/compileTime/conversion/: TypeToPointerPair.hpp
src/picongpu/include/fields/: FieldB.hpp  FieldB.tpp  FieldE.hpp  FieldE.kernel  FieldE.tpp  FieldJ.hpp  FieldJ.kernel  FieldJ.tpp  FieldManipulator.hpp  FieldManipulator.kernel  FieldTmp.hpp  FieldTmp.kernel  FieldTmp.tpp  LaserPhysics.hpp
src/picongpu/include/fields/MaxwellSolver/: Solvers.hpp
src/picongpu/include/fields/NGPSolver/: CurrentNGP.hpp
src/picongpu/include/fields/background/: cellwiseOperation.hpp
src/picongpu/include/fields/currentDeposition/: Solver.def  Solver.hpp
src/picongpu/include/fields/numericalCellTypes/: EMFCenteredCell.hpp  YeeCell.hpp
src/picongpu/include/fields/tasks/: FieldFactory.hpp  FieldFactory.tpp  TaskFieldReceiveAndInsert.hpp  TaskFieldReceiveAndInsertExchange.hpp  TaskFieldSend.hpp  TaskFieldSendExchange.hpp
src/picongpu/include/initialization/: InitialiserController.hpp  SimRestartInitialiser.hpp
src/picongpu/include/particles/: InitFunctors.hpp  MallocMCBuffer.hpp  MallocMCBuffer.tpp  Particles.def  Particles.hpp  Particles.kernel  Particles.tpp  ParticlesFunctors.hpp  ParticlesInit.kernel  Species.hpp
src/picongpu/include/particles/access/: Cell2Particle.tpp
src/picongpu/include/particles/compileTime/: traits.hpp
src/picongpu/include/particles/gasProfiles/: FreeFormulaImpl.hpp  FromHDF5Impl.hpp  FromPNGImpl.def  FromPNGImpl.hpp  GaussianCloudImpl.hpp  GaussianImpl.def  GaussianImpl.hpp  HomogenousImpl.hpp  IProfile.hpp  LinearExponentialImpl.hpp  Profiles.def  SphereFlanksImpl.hpp  gasFreeFormula.hpp  gasFromHdf5.hpp  gasGaussian.hpp  gasGaussianCloud.hpp  gasHomogenous.hpp  gasLinExp.hpp  gasNone.hpp  gasSphereFlanks.hpp  profiles.def  profiles.hpp
src/picongpu/include/particles/init/: particleInitQuietStart.hpp  particleInitRandomPos.hpp
src/picongpu/include/particles/ionization/: ionization.hpp
src/picongpu/include/particles/manipulators/: AssignImpl.hpp  CreateParticlesFromParticleImpl.def  CreateParticlesFromParticleImpl.hpp  DriftImpl.def  DriftImpl.hpp  FreeImpl.hpp  IManipulator.hpp  IfRelativeGlobalPositionImpl.def  IfRelativeGlobalPositionImpl.hpp  NoneImpl.hpp  RandomPosImpl.def  RandomPosImpl.hpp  RandomPositionImpl.hpp  SetAttributeImpl.hpp  TemperatureImpl.def  TemperatureImpl.hpp  manipulators.def  manipulators.hpp
src/picongpu/include/particles/particleToGrid/: ComputeGridValuePerFrame.def  ComputeGridValuePerFrame.hpp  EnergyDensity.def  EnergyDensity.kernel  energyDensity.kernel
src/picongpu/include/particles/pusher/: particlePusherAxl.hpp  particlePusherBoris.hpp  particlePusherFree.hpp  particlePusherNone.hpp  particlePusherPhot.hpp  particlePusherVay.hpp
src/picongpu/include/particles/shapes/: CIC.hpp  PCS.hpp  TSC.hpp
src/picongpu/include/particles/startPosition/: Functors.hpp  IFunctor.hpp  MakroParticleCfg.hpp  QuietImpl.hpp  RandomImpl.hpp  functors.def
src/picongpu/include/particles/traits/: GetAtomicNumbers.hpp  GetCurrentSolver.hpp  GetInterpolation.hpp  GetMass.hpp  GetPusher.hpp  GetShape.hpp
src/picongpu/include/plugins/: BinEnergyParticles.hpp  CountParticles.hpp  EnergyFields.hpp  EnergyParticles.hpp  FieldEnergy.tpp  ILightweightPlugin.hpp  ISimulationPlugin.hpp  IntensityModule.hpp  IntensityPlugin.hpp  IsaacPlugin.hpp  LineSliceFields.hpp  LiveViewPlugin.hpp  ParticleDensity.tpp  PluginController.hpp  PngModule.hpp  PngPlugin.hpp  PositionsParticles.hpp  Radiation.hpp  SliceFieldPrinter.tpp  SliceFieldPrinterMulti.hpp  SortPartcilesPerFrame.hpp  SumCurrents.hpp  TotalDivJ.tpp
src/picongpu/include/plugins/PhaseSpace/: PhaseSpace.hpp  PhaseSpace.tpp  PhaseSpaceFunctors.hpp  PhaseSpaceMulti.tpp
src/picongpu/include/plugins/adios/: ADIOSWriter.hpp  WriteSpecies.hpp
src/picongpu/include/plugins/common/: txtFileHandling.hpp
src/picongpu/include/plugins/hdf5/: HDF5Writer.hpp  WriteSpecies.hpp
src/picongpu/include/plugins/isaac/: isaac.hpp
src/picongpu/include/plugins/kernel/: CopySpecies.kernel  CopySpeciesGlobal2Local.kernel
src/picongpu/include/plugins/makroParticleCounter/: PerSuperCell.hpp
src/picongpu/include/plugins/output/: GatherSlice.hpp
src/picongpu/include/plugins/radiation/: Radiation.hpp  Radiation.kernel
src/picongpu/include/simulationControl/: MovingWindow.hpp  MySimulation.hpp  VirtualWindow.hpp
src/picongpu/include/simulation_defines/: _defaultParam.loader  _defaultPostParam.loader  _defaultUnitless.loader
src/picongpu/include/simulation_defines/param/: componentsConfig.param  currentConfig.param  dimension.param  fieldBackground.param  fileOutput.param  gasConfig.param  gridConfig.param  laserConfig.param  memory.param  particleAttributes.param  particleConfig.param  particleDefinition.param  particleTraits.param  species.param  (+6 more)
src/picongpu/include/traits/: GetCharge.hpp  GetDataBoxType.hpp  GetMargin.hpp  GetMass.hpp
src/picongpu/submit/: gpu_numa_aware
src/picongpu/submit/hypnos/: k20_profile.tpl  k20_vampir_profile.tpl
src/picongpu/submit/hypnos-hzdr/: k20_profile.tpl  k80_profile.tpl
src/picongpu/submit/pizdaint-cscs/: normal_profile.tpl
src/picongpu/submit/titan-ornl/: batch_profile.tpl
(+2004 files in other folders)
